--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.7.2
-bootstrap4==0.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+distlib==0.3.8
 Django==5.0
 django-humanize==0.1.2
 django-mathfilters==1.0.0
+filelock==3.13.1
 fonttools==4.40.0
 humanize==4.9.0
-MarkupSafe==2.1.3
-numpy==1.25.0
-pandas==2.0.2
+idna==3.6
+platformdirs==4.1.0
 requests==2.31.0
+sqlparse==0.4.4
+tzdata==2023.4
+urllib3==2.1.0
 virtualenv==20.25.0
